--- a/src/main/webapp/WEB-INF/views/people/edit.html
+++ b/src/main/webapp/WEB-INF/views/people/edit.html
@@ -7,11 +7,20 @@
 <body>
 <form th:method="POST" th:action="@{/people/{id}(id=${person.getId()})}" th:object="${person}">
 
-    <label for="fullName" >Edit fullName: </label>
+    <label for="fullName">Edit fullName: </label>
     <input type="text" id="fullName" th:field="*{fullName}">
+    <div style="color: red" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}">FullName error</div>
+
     <br>
     <label for="year">Enter year:</label>
     <input type="text" id="year" th:field="*{year}">
+    <div style="color: red" th:if="${#fields.hasErrors('year')}" th:errors="*{year}">Year error</div>
+
+    <br>
+    <label for="email">Edit email:</label>
+    <input type="text" id="email" th:field="*{email}">
+    <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
+
 
     <input type="submit" value="Update">
 </form>
