--- a/src/main/webapp/WEB-INF/views/books/index.html
+++ b/src/main/webapp/WEB-INF/views/books/index.html
@@ -7,12 +7,36 @@
 <body>
 <div th:object="${book}">
     <h1 th:text="${book.title}+', '+${book.year}">Book</h1>
-    <h1 th:text="'Author: ' + ${book.author}">Author</h1>
-
+    <h5 th:text="'Author: ' + ${book.author}">Author</h5>
 
 </div>
+<div th:if="${owner}">
+    <span >This book is on <span th:text="${owner.getFullName()}">Person name</span></span>
+
+    <form th:method="PATCH" th:action="@{books/{id}/release(id=${book.getId()})}">
+        <input type="submit" value="Release the book">
+    </form>
+</div>
+
+
+
+<div th:if="${people}">
+    <span>This book is available, to whom assign?</span>
+    <form th:method="PATCH" th:action="@{/books/{id}/assign(id=${book.getId()})}">
+        <label for="person">Choose person</label>
+        <select th:object="${person}" th:field="*{id}" id="person">
+            <option th:each="person: ${people}" th:value="${person.getId()}" th:text="${person.getFullName()}">
+            </option>
+        </select>
+        <input type="submit" value="Assign book">
+    </form>
+
+</div>
+
+<hr/>
 <a th:href="@{/books/{id}/edit(id=${book.id})}">Edit</a>
 <br>
+
 <form th:action="@{/books/{id}/delete(id=${book.id})}" method="post">
     <button type="submit">Delete</button>
 </form>
