--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -9,6 +9,23 @@
     <h1 th:text="${person.fullName}+', '+${person.year}">User</h1>
     <h1 th:text="'Email: '+${person.getEmail()}">User</h1>
 
+<div th:if="${books.isEmpty()}">
+    <p>This person didnt take any book</p>
+    <hr>
+</div>
+
+
+
+<div th:if="${!books.isEmpty()}">
+    <hr/>
+    <b>Books:</b>
+    <br>
+    <table th:each="book: ${books}">
+        <tr th:text="${book.title}+ ', '+${book.author}+', '+ ${book.year}">book</tr>
+    </table>
+    <hr>
+</div>
+
 
 </div>
 <a th:href="@{/people/{id}/edit(id=${person.id})}">Edit</a>
