--- a/src/main/webapp/WEB-INF/views/books/index.html
+++ b/src/main/webapp/WEB-INF/views/books/index.html
@@ -13,7 +13,7 @@
 <div th:if="${owner}">
     <span >This book is on <span th:text="${owner.getFullName()}">Person name</span></span>
 
-    <form th:method="PATCH" th:action="@{books/{id}/release(id=${book.getId()})}">
+    <form th:method="PATCH" th:action="@{/books/{id}/release(id=${book.getId()})}">
         <input type="submit" value="Release the book">
     </form>
 </div>
